tests/compile-fail/tracked_method_missing_db.stderr
error: #[salsa::tracked] must also be applied to the impl block for tracked methods
  --> tests/compile-fail/tracked_method_missing_db.rs:21:14
   |
21 |     fn no_db(self) {}
   |              ^^^^

error: tracked methods must have a database parameter after `self`
  --> tests/compile-fail/tracked_method_missing_db.rs:21:5
   |
21 |     fn no_db(self) {}
   |     ^^^^^^^^^^^^^^
